# snctfes2026-suzuleague

./: .gitignore  README.md  pyproject.toml  teams.example.json
docs/: architecture.md  development.md  explainer.html  game-rules.md  protocol.md  status.md  イベント責任者作成の企画書.md
src/suzuleague/: __init__.py  audience.py  audience_template.html  cloud.py  dashboard.py  engine.py  loadtest.py  models.py  protocol.py  questions.py  sim_scratch.py  teams.py
tests/: test_audience.py  test_cloud_host.py  test_engine.py  test_protocol.py  test_teams.py
