[project]
name = "suzuleague"
version = "0.1.0"
description = "高専祭ステージイベント「スズリーグ」進行システムのバックエンド"
readme = "README.md"
authors = [
    { name = "InoueKoshi", email = "130729590+inouekoshi@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    # 上限を切ってあるのは、本番(2026/10/31-11/1)まで挙動を変えないため。
    # とくに scratchattach は docs/development.md「既知の落とし穴」に書いた
    # 罠を 2.2.1 で実測しており、更新すると前提が崩れる可能性がある。
    "rich>=15.0.0,<16",
    "scratchattach>=2.2.1,<3",
    # scratchattach の依存として入ってくるが、cloud.py と loadtest.py が
    # 直接 import しているので明示する（scratchattach 側が外しても壊れないように）
    "websocket-client>=1.9.0,<2",
]

[project.scripts]
suzuleague = "suzuleague.dashboard:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
